[package]
name = "task_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stuff"
crate-type = ["lib"]
doc = true
path = "src/main.rs"

[dependencies]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "compare"
harness = false
